[gd_scene load_steps=46 format=3 uid="uid://ckl0262w6yrmv"]

[ext_resource type="Script" path="res://allies/archer_2/archer.gd" id="1_tbk3s"]
[ext_resource type="PackedScene" uid="uid://cf5p4jifvkr5q" path="res://components/character_components/health_component.tscn" id="2_by07i"]
[ext_resource type="Texture2D" uid="uid://bbpse4mvg46f1" path="res://game assets test/Elementals_Leaf_ranger_Free_v1.0/Elementals_Leaf_ranger_Free_v1.0/animations/spritesheets/idle.png" id="2_xeaxd"]
[ext_resource type="PackedScene" uid="uid://bci8dwt4iycg0" path="res://components/character_components/velocity_component.tscn" id="3_q3pe8"]
[ext_resource type="PackedScene" uid="uid://dprnmdpqf2q34" path="res://components/character_components/hit_box_component.tscn" id="4_i2dwk"]
[ext_resource type="PackedScene" uid="uid://ba2mdypfi1l0u" path="res://components/character_components/animation_component.tscn" id="5_vpnea"]
[ext_resource type="PackedScene" uid="uid://cnb86u6w26c04" path="res://components/character_states/character_state_machine.tscn" id="6_7k3vs"]
[ext_resource type="Script" path="res://allies/archer_2/hit_box_component_archer.gd" id="6_vhivm"]
[ext_resource type="PackedScene" uid="uid://bo3jadkrsersr" path="res://components/character_components/enemy_detection_component.tscn" id="7_qra4k"]
[ext_resource type="PackedScene" uid="uid://cni7yp7s8ub7m" path="res://components/character_states/state_component.tscn" id="7_yuvkh"]
[ext_resource type="Script" path="res://allies/archer_2/ArcherGroundState.gd" id="8_67c8x"]
[ext_resource type="Texture2D" uid="uid://bu8d4cu72n1pt" path="res://game assets test/custom/entities/humans/jobless/jobless_idle.png" id="8_l16fn"]
[ext_resource type="PackedScene" uid="uid://bgedrb0rxmvnc" path="res://components/character_states/hit_state.tscn" id="9_amqku"]
[ext_resource type="PackedScene" uid="uid://d1ryhs5mbdtww" path="res://components/character_states/enemy_dead_state.tscn" id="10_w3b48"]
[ext_resource type="Script" path="res://allies/archer_2/ArcherAttackState.gd" id="11_ej3uj"]
[ext_resource type="PackedScene" uid="uid://7nxesgqogyv3" path="res://allies/archer_2/shoot_component.tscn" id="13_hawyr"]
[ext_resource type="Texture2D" uid="uid://c57alu4av16kc" path="res://game assets test/custom/entities/humans/archer/archer_idle.png" id="15_dgsno"]
[ext_resource type="Texture2D" uid="uid://def06uqs5jpln" path="res://game assets test/custom/entities/humans/archer/archer_shoot.png" id="16_yvyvy"]
[ext_resource type="Texture2D" uid="uid://xh1htdb6egcx" path="res://game assets test/custom/entities/humans/archer/archer_run.png" id="17_u02rs"]
[ext_resource type="Script" path="res://allies/archer_2/HitState_archer.gd" id="21_whidq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1krw8"]
height = 44.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwhsp"]
size = Vector2(36.6667, 44.5)

[sub_resource type="Animation" id="Animation_4otqw"]
resource_name = "Death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_l16fn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_3ycnk"]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_dgsno")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_i7t6i"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_dgsno")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_xwfcj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_xeaxd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_jtdsu"]
resource_name = "Shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("16_yvyvy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_j3vdk"]
resource_name = "Walk"
length = 0.3
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("17_u02rs")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ndfug"]
_data = {
"Death": SubResource("Animation_4otqw"),
"Hit": SubResource("Animation_3ycnk"),
"Idle": SubResource("Animation_i7t6i"),
"RESET": SubResource("Animation_xwfcj"),
"Shoot": SubResource("Animation_jtdsu"),
"Walk": SubResource("Animation_j3vdk")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q1p26"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4b7kk"]
animation = &"Hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_obs4h"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rwusq"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3m16s"]
animation = &"Walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_m8qyx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_obs4h")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_rwusq")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_3m16s")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_venu0"]
animation = &"Shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dl78q"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aypr4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6nrqs"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yqmhr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ldk1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w5xjc"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_m3lok"]
states/Death/node = SubResource("AnimationNodeAnimation_q1p26")
states/Death/position = Vector2(661, 100)
states/Hit/node = SubResource("AnimationNodeAnimation_4b7kk")
states/Hit/position = Vector2(494, 32)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_m8qyx")
states/Move/position = Vector2(378, 93)
states/Shoot/node = SubResource("AnimationNodeAnimation_venu0")
states/Shoot/position = Vector2(494, 162)
transitions = ["Start", "Move", SubResource("AnimationNodeStateMachineTransition_dl78q"), "Hit", "Move", SubResource("AnimationNodeStateMachineTransition_aypr4"), "Move", "Hit", SubResource("AnimationNodeStateMachineTransition_6nrqs"), "Move", "Death", SubResource("AnimationNodeStateMachineTransition_yqmhr"), "Move", "Shoot", SubResource("AnimationNodeStateMachineTransition_5ldk1"), "Shoot", "Move", SubResource("AnimationNodeStateMachineTransition_w5xjc")]

[sub_resource type="CircleShape2D" id="CircleShape2D_f0hhf"]
radius = 600.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0uoa"]
size = Vector2(1638.33, 113.333)

[node name="Archer" type="CharacterBody2D" node_paths=PackedStringArray("hit_state", "shoot_component")]
scale = Vector2(0.7, 0.7)
collision_layer = 8
script = ExtResource("1_tbk3s")
hit_state = NodePath("CharacterStateMachine/Hit")
shoot_component = NodePath("ShootComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_1krw8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 6.667)
scale = Vector2(0.23, 0.23)
texture = ExtResource("2_xeaxd")
hframes = 2
frame = 1

[node name="HealthComponent" parent="." node_paths=PackedStringArray("dead_state") instance=ExtResource("2_by07i")]
max_health = 20.0
dead_state = NodePath("../CharacterStateMachine/Dead")

[node name="VelocityComponent" parent="." instance=ExtResource("3_q3pe8")]

[node name="HitBoxComponent" parent="." instance=ExtResource("4_i2dwk")]
collision_layer = 8
script = ExtResource("6_vhivm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(9.93411e-08, 7.25)
shape = SubResource("RectangleShape2D_pwhsp")

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite", "animation_player", "animation_tree") instance=ExtResource("5_vpnea")]
sprite = NodePath("../Sprite2D")
animation_player = NodePath("AnimationPlayer")
animation_tree = NodePath("AnimationTree")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationComponent"]
libraries = {
"": SubResource("AnimationLibrary_ndfug")
}

[node name="AnimationTree" type="AnimationTree" parent="AnimationComponent"]
tree_root = SubResource("AnimationNodeStateMachine_m3lok")
anim_player = NodePath("../AnimationPlayer")
parameters/Move/blend_position = 0.00525916

[node name="CharacterStateMachine" parent="." node_paths=PackedStringArray("character", "animation_component", "current_state") instance=ExtResource("6_7k3vs")]
character = NodePath("..")
animation_component = NodePath("../AnimationComponent")
current_state = NodePath("Ground")

[node name="Ground" parent="CharacterStateMachine" node_paths=PackedStringArray("shoot_attack", "attack_state") instance=ExtResource("7_yuvkh")]
script = ExtResource("8_67c8x")
shoot_attack = NodePath("../../ShootComponent")
attack_state = NodePath("../Attack")
shoot_anim_name = "Shoot"

[node name="Hit" parent="CharacterStateMachine" node_paths=PackedStringArray("hitbox_component") instance=ExtResource("9_amqku")]
script = ExtResource("21_whidq")
hitbox_component = NodePath("../../HitBoxComponent")

[node name="Dead" parent="CharacterStateMachine" instance=ExtResource("10_w3b48")]
can_move = false

[node name="Attack" parent="CharacterStateMachine" node_paths=PackedStringArray("animation_component", "return_state") instance=ExtResource("7_yuvkh")]
script = ExtResource("11_ej3uj")
animation_component = NodePath("../../AnimationComponent")
return_state = NodePath("../Ground")
return_animation_name = "Move"
attack_name = "Shoot"
can_move = false

[node name="EnemyDetectionComponent" parent="." node_paths=PackedStringArray("detection_area") instance=ExtResource("7_qra4k")]
detection_area = NodePath("EnemyDetection")

[node name="EnemyDetection" type="Area2D" parent="EnemyDetectionComponent"]
visible = false
collision_layer = 0
collision_mask = 68

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionComponent/EnemyDetection"]
shape = SubResource("CircleShape2D_f0hhf")

[node name="ShootComponent" parent="." node_paths=PackedStringArray("use_state") instance=ExtResource("13_hawyr")]
cd_time = 3.0
attack_name = "Shoot"
use_state = NodePath("../CharacterStateMachine/Ground")

[node name="IdleTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="HuntArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="HuntArea"]
shape = SubResource("RectangleShape2D_s0uoa")

[connection signal="use_attack" from="." to="CharacterStateMachine/Ground" method="_on_shoot_attack_use"]
[connection signal="on_hit" from="HitBoxComponent" to="CharacterStateMachine/Hit" method="_on_hit_box_component_on_hit"]
[connection signal="animation_finished" from="AnimationComponent/AnimationTree" to="AnimationComponent" method="_on_animation_tree_animation_finished"]
[connection signal="use_attack" from="CharacterStateMachine/Ground" to="ShootComponent" method="_on_ground_use_attack"]
[connection signal="body_entered" from="EnemyDetectionComponent/EnemyDetection" to="EnemyDetectionComponent" method="_on_enemy_detection_body_entered"]
[connection signal="body_exited" from="EnemyDetectionComponent/EnemyDetection" to="EnemyDetectionComponent" method="_on_enemy_detection_body_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="body_entered" from="HuntArea" to="." method="_on_hunt_area_body_entered"]
[connection signal="body_exited" from="HuntArea" to="." method="_on_hunt_area_body_exited"]
